--- a/pages/transcodingList.html
+++ b/pages/transcodingList.html
@@ -7,16 +7,12 @@
     </a>
     <hr>
     <div class="btn-group">
-        <button type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-trash"></i> 清除失败任务</button>
-        <button type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-remove"></i> 删除</button>
+        <button type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i> 刷新列表</button>
     </div>
     <hr class="break-space">
     <table class="table table-hover table-condensed width-progress ">
         <thead>
             <tr>
-                <th>
-                    <input type="checkbox">
-                </th>
                 <th>名称</th>
                 <th>大小</th>
                 <th>进度</th>
