--- a/pages/uploadList.html
+++ b/pages/uploadList.html
@@ -1,4 +1,4 @@
-<div ng-controller="uploadListController as uploadList" ng-init="uploadList.init()" class="col-sm-9 page col-right">
+<div class="col-sm-9 page col-right">
     <a>
         <strong>
             <i class="glyphicon glyphicon-upload"></i>
@@ -7,7 +7,7 @@
     </a>
     <hr>
     <div class="btn-group">
-        <button ng-click="uploadList.add()" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-plus"></i> 添加上传任务</button>
+        <button ng-click="app.upload()" type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-plus"></i> 添加上传任务</button>
     </div>
     <hr class="break-space">
     <table class="table table-hover table-condensed width-progress ">
@@ -16,47 +16,31 @@
                 <th>名称</th>
                 <th>大小</th>
                 <th>进度</th>
-                <th>速度</th>
-                <th>剩余</th>
                 <th>字幕</th>
                 <th>操作</th>
             </tr>
         </thead>
         <tbody>
-            <tr data-copy="2">
-                <td>星际迷航</td>
-                <td>1.1G</td>
+            <tr ng-repeat="row in app.uploadList.data">
+                
+                <!--影片名称-->
+                <td>{{row.video.name}}</td>
+                <!--影片名称-->
+
+                <!--影片size-->
+                <td>{{row.video.size}}字节</td>
+                <!--影片size-->
+
+                <!--影片上传进度-->
+                <td>{{row.video.percentComplete}}%</td>
+                <!--影片上传进度-->
+
+                <!--字幕上传进度-->
+                <td>{{row.subtitle.percentComplete | subtitlePercentComplete}}</td>
+                <!--字幕上传进度-->
+
                 <td>
-                    <div class="progress in-table">
-                        <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;min-width: 2em;">
-                            <span class="">40%</span>
-                        </div>
-                    </div>
-                </td>
-                <td>300kb/s</td>
-                <td>0.6G</td>
-                <td>无／上传中／已上传／上传失败</td>
-                <td>
-                    <button class="btn btn-xs btn-default" title="删除">
-                        <i class="glyphicon glyphicon-remove"></i>
-                    </button>
-                </td>
-            </tr>
-            <tr>
-                <td>星际迷航</td>
-                <td>1.1G</td>
-                <td>
-                    <div class="progress in-table">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;min-width: 2em;">
-                            <span class="">失败</span>
-                        </div>
-                    </div>
-                </td>
-                <td>-</td>
-                <td>-</td>
-                <td>无／上传中／已上传／上传失败</td>
-                <td>
-                    <button class="btn btn-xs btn-default" title="删除">
+                    <button ng-click="app.uploadList.deleteById(row.id)" class="btn btn-xs btn-default" title="删除">
                         <i class="glyphicon glyphicon-remove"></i>
                     </button>
                 </td>
