--- a/pages/transcodingList.html
+++ b/pages/transcodingList.html
@@ -7,9 +7,10 @@
     </a>
     <hr>
     <div class="btn-group">
-        <button type="button" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i> 刷新列表</button>
+        <button type="button" class="btn btn-default btn-sm" ng-click="tl.refresh();"><i class="glyphicon glyphicon-refresh"></i > 刷新列表</button>
     </div>
     <hr class="break-space">
+    <div ng-show="tl.loading">loading....</div>
     <table class="table table-hover table-condensed width-progress ">
         <thead>
             <tr>
@@ -18,46 +19,30 @@
                 <th>进度</th>
                 <th>剩余</th>
                 <th>描述</th>
-                <th>操作</th>
+                <!-- <th>操作</th> -->
             </tr>
         </thead>
         <tbody>
-            <tr data-copy="2">
-                <td>星际迷航</td>
-                <td>1.1G</td>
+            <tr ng-repeat= "task in tl.taskList track by $index">
+                <td>{{task.FileOrigName}}</td>
+                <td>{{task.Size}}</td>
                 <td>
                     <div class="progress in-table">
-                        <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;min-width: 2em;">
-                            <span class="">40%</span>
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{task.TranscodePercent}}" aria-valuemin="0" aria-valuemax="100" style="width: 100%;min-width: 2em;">
+                            {{task.TranscodePercent}}%
                         </div>
                     </div>
                 </td>
-                <td>0.6G</td>
-                <td>正在转码</td>
-                <td>
+                <td>{{task.Size*(100-task.TranscodePercent)/100}}</td>
+                <td>{{task.TranscodeFailInfo}}</td>
+                <!-- 删除先不做 -->
+<!--                 <td>
                     <button class="btn btn-xs btn-default" title="删除">
                         <i class="glyphicon glyphicon-remove"></i>
                     </button>
-                </td>
-            </tr>
-            <tr>
-                <td>星际迷航</td>
-                <td>1.1G</td>
-                <td>
-                    <div class="progress in-table">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;min-width: 2em;">
-                            <span class="">失败</span>
-                        </div>
-                    </div>
-                </td>
-                <td>-</td>
-                <td>[失败原因]</td>
-                <td>
-                    <button class="btn btn-xs btn-default" title="删除">
-                        <i class="glyphicon glyphicon-remove"></i>
-                    </button>
-                </td>
+                </td> -->
             </tr>
         </tbody>
     </table>
+    <div ng-show="tl.noData">查无数据</div>
 </div>
