--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -6,10 +6,20 @@
         </strong>
     </a>
     <hr>
-    <input /><button>搜索</button> <br>
-    分类 <input type="checkbox">恐怖 <input type="checkbox">爱情<br>
-    产地 <input type="checkbox">中国 <input type="checkbox">韩国
+    <input ng-model="editedList.keywords" />
+    <button>搜索</button>
+    <div class="form-group">
+        <label>类型</label><br>
+        <div ng-show="editedList.noCategotyData">查无数据</div>
+        <span ng-repeat="category in editedList.categoryList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="editedList.chooseCateory(category.ID,this.value)">{{category.CategoryName[editedList.defaultLang]}}</span>
+    </div>
+    <div class="form-group">
+        <label>产地</label><br>
+        <div ng-show="editedList.noLocationData">查无数据</div>
+        <span ng-repeat="location in editedList.locationList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="editedList.chooseLocation(location.ID,this.value)">{{location.LocationName[editedList.defaultLang]}}</span>
+    </div>
     <hr class="break-space">
+    <div ng-show="editedList.loading">Loading...</div>
     <table class="table table-hover table-condensed">
         <thead>
             <tr>
@@ -35,4 +45,5 @@
             </tr>
         </tbody>
     </table>
+    <div ng-show="editedList.loading">查无数据</div>
 </div>
