--- a/pages/addMovieInfo.html
+++ b/pages/addMovieInfo.html
@@ -12,7 +12,7 @@
                         <div class="form-group" >
                             <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
                                 <label>名称-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Name[lang.code]" value="星际迷航">
+                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Name[lang.code]" value="星际迷航" required>
                             </span>
                             
                         </div>
@@ -21,13 +21,13 @@
                         <div class="form-group">
                             <label>类型</label>
                             <div ng-show="addMovieInfo.noCategotyData">查无数据</div>
-                            <span ng-repeat="category in addMovieInfo.categoryList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="addMovieInfo.chooseCateory(category.ID,this.value)">{{category.CategoryName[addMovieInfo.defaultLang]}}</span>
+                            <span ng-repeat="category in addMovieInfo.categoryList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="addMovieInfo.chooseCateory(category.ID,this.value)" >{{category.CategoryName[addMovieInfo.defaultLang]}}</span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>产地</label>
                             <div ng-show="addMovieInfo.noLocationData">查无数据</div>
-                            <span ng-repeat="location in addMovieInfo.locationList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="addMovieInfo.chooseLocation(location.ID,this.value)">{{location.LocationName[addMovieInfo.defaultLang]}}</span>
+                            <span ng-repeat="location in addMovieInfo.locationList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="addMovieInfo.chooseLocation(location.ID,this.value)" >{{location.LocationName[addMovieInfo.defaultLang]}}</span>
                         </div>
                         <hr>
                         <div class="form-group">
@@ -37,66 +37,63 @@
                                 <img src="{{img.img.src}}">
                                 上传进度：{{img.img.percentComplete}}  
                                </div>
-                               {{addMovieInfo.uploadList.data[0].img.src}}
                             <hr class="break-space">
-                            <div ng-click="addMovieInfo.addCoverImg()" class="btn btn-primary">保存</div>
+                            <div ng-click="addMovieInfo.addCoverImg()" class="btn btn-primary">上传</div>
                         </div>
                         <hr>
                         <div class="form-group">
                         <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
                             <label>简介-{{lang.name}}</label>
                         
-                            <textarea style="height: 150px;" type="text" ng-model="addMovieInfo.movieInfo.Introduce[lang.code]" class="form-control"></textarea>
+                            <textarea style="height: 150px;" type="text" ng-model="addMovieInfo.movieInfo.Introduce[lang.code]" class="form-control" required></textarea>
                         </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>价格</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Price">
+                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Price" required>
                         </div>
                         <hr>
                         <label>影片大小</label>
-                        <h5>{{addMovieInfo.maskParams.MovieSize}}</h5>
+                        <h5>{{addMovieInfo.maskParams.Size}}</h5>
                         <hr>
                         <div class="form-group">
                             <label>上映年份</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Year">
+                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Year" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
                                 <label>导演-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Director[lang.code]" value="星际迷航">
+                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Director[lang.code]" value="星际迷航" required>
                             </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
                                 <label>演员-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Actor[lang.code]" value="星际迷航">
+                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Actor[lang.code]" value="星际迷航" required>
                             </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>排序</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Seq">
+                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Seq" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>首字母（拼音大写缩写）</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.SearchName">
+                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.SearchName" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>评分（总分10分，精确到一位小数，例如：9.7）</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Score">
+                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Score" required>
                         </div>
                 </div>
                 <div class="modal-footer">
                     <a ng-click="addMovieInfo.cancel()" class="btn">取消</a>
-                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid">保存修改</button>
-                    movieForm.$invalid {{movieForm.$invalid}} <br>
-                    movieForm.$valid {{movieForm.$valid}}
+                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid || addMovieInfo.saving ">保存修改</button>
                 </div>
             </form>  
         </div>
