--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>videos</title>
-  <link rel="stylesheet" href="dist/style/app.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>视频库</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="dist/style/app.min.css" />
   <link rel="stylesheet" href="node_modules/ng-table/bundles/ng-table.min.css" />
 </head>
 <body ng-app="openvod">
