--- a/pages/app.html
+++ b/pages/app.html
@@ -9,8 +9,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">videos</a>
-                <a ng-click="app.logout()">log out</a>
+                <a class="navbar-brand">视频库</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a ng-click="app.logout()"><i class="glyphicon glyphicon-lock"></i> 退出</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
