--- a/pages/notEditedList.html
+++ b/pages/notEditedList.html
@@ -18,10 +18,10 @@
         <tbody>
             <tr data-copy="10" ng-repeat="task in notEditedList.taskList track by $index">
                 <td>{{task.FileOrigName}}</td>
-                <td>{{task.Size}}</td>
+                <td>{{task.Size}} 字节</td>
                 <td>
                     <button ng-click="notEditedList.add(task)" class="btn btn-xs btn-default" data-toggle="modal" title="入库" data-target="#film-edit">
-                        <i class="glyphicon glyphicon-film"></i>
+                        <i class="glyphicon glyphicon-film"></i> 入库
                     </button>
                     <!-- 删除功能 先不做 -->
                     <!-- <button class="btn btn-xs btn-default" title="删除">
