--- a/pages/editMovieInfo.html
+++ b/pages/editMovieInfo.html
@@ -58,7 +58,7 @@
                     </div>
                     <hr>
                     <label>影片大小</label>
-                    <h5>{{editMovieInfo.movieInfo.MovieSize}}</h5>
+                    <h5>{{editMovieInfo.movieInfo.MovieSize}} 字节</h5>
                     <hr>
                     <div class="form-group">
                         <label>上映年份</label>
