--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>视频库</title>
+  <link rel="shortcut icon"type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="node_modules/ng-table/bundles/ng-table.min.css" />
   <link rel="stylesheet" href="dist/style/app.min.css" />
