--- a/pages/login.html
+++ b/pages/login.html
@@ -3,11 +3,6 @@
     <div id="top-nav" class="navbar navbar-inverse navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand">清鹤视频库</a>
             </div>
         </div>
@@ -26,7 +21,7 @@
         <div class="center-block fixed-width-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">登录</h3>
+                    <h3 class="panel-title text-center">清鹤视频库</h3>
                 </div>
                 <div class="panel-body">
 
