视频库——> 多媒体库

--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
     <div id="top-nav" class="navbar navbar-inverse navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand">清鹤视频库</a>
+                <a class="navbar-brand">清鹤多媒体库</a>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="center-block fixed-width-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title text-center">清鹤视频库</h3>
+                    <h3 class="panel-title text-center">清鹤多媒体库</h3>
                 </div>
                 <div class="panel-body">
 
