--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>视频库</title>
-  <link rel="shortcut icon"type="image/x-icon" href="favicon.ico" />
+  <title>清鹤多媒体库</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="node_modules/ng-table/bundles/ng-table.min.css" />
   <link rel="stylesheet" href="dist/style/app.min.css" />
