--- a/pages/app.html
+++ b/pages/app.html
@@ -4,7 +4,7 @@
     <div id="top-nav" class="navbar navbar-inverse navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand">视频库</a>
+                <a class="navbar-brand">清鹤多媒体库</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
