音乐库 添加音乐

--- a/pages/app.html
+++ b/pages/app.html
@@ -38,6 +38,12 @@
                     <i class="glyphicon glyphicon-film"></i>&nbsp&nbsp已入库
                 </a>
                 <hr>
+                <hr>
+                <a ng-click="app.gotoPage('app.musicLibrary')" class="font-bold no-underline cursor-default">
+                    <i class="glyphicon glyphicon-music"></i>&nbsp&nbsp音乐库
+                </a>
+                <hr>
+
             </div>
             <!--左侧导航栏-->
             
