音乐库 编辑

--- a/pages/musicLibrary.html
+++ b/pages/musicLibrary.html
@@ -26,7 +26,7 @@
                 <td data-title="'封面'" ><img src="" alt="" ng-src="{{music.PicURL_ABS}}" style="max-width: 100px;max-height: 100px;"> </td>
                 <td data-title="'名称'" >{{music.Name[mL.defaultLang]}}</td>
                 <td data-title="'歌手'" >{{music.SingerName[mL.defaultLang]}}</td>
-                <td data-title="'编辑'" ><button ng-click="mL.editMusic(music.musicID)" class="btn btn-default">编辑</button> </td>
+                <td data-title="'编辑'" ><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button> </td>
             </tr>
         </tbody>
     </table>
