编辑电影信息 添加 电影地址 字段

--- a/pages/editMovieInfo.html
+++ b/pages/editMovieInfo.html
@@ -61,6 +61,9 @@
                     <label>影片大小</label>
                     <h5>{{editMovieInfo.movieInfo.MovieSize}} 字节</h5>
                     <hr>
+                    <label>影片地址</label>
+                    <h5 style="word-break:break-all;word-wrap: break-word;">{{editMovieInfo.movieInfo.URL_ABS}}</h5>
+                    <hr>
                     <div class="form-group">
                         <label>上映年份</label>
                         <input type="text" class="form-control" ng-model="editMovieInfo.movieInfo.Year" required>
