文件上传过程中 不能添加

--- a/pages/musicLibrary.html
+++ b/pages/musicLibrary.html
@@ -24,9 +24,9 @@
             <div ng-show="mL.loading">loading...</div>
             <tr ng-repeat="music in mL.musicList">
                 <td data-title="'封面'" ><img src="" alt="" ng-src="{{music.PicURL_ABS}}" style="max-width: 100px;max-height: 100px;"> </td>
-                <td data-title="'名称'" >{{music.Name[mL.defaultLang]}}</td>
-                <td data-title="'歌手'" >{{music.SingerName[mL.defaultLang]}}</td>
-                <td data-title="'编辑'" ><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button> </td>
+                <td data-title="'名称'" style="vertical-align: middle;">{{music.Name[mL.defaultLang]}}</td>
+                <td data-title="'歌手'" style="vertical-align: middle;">{{music.SingerName[mL.defaultLang]}}</td>
+                <td data-title="'编辑'" style="vertical-align: middle;"><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button> </td>
             </tr>
         </tbody>
     </table>
