添加音乐删除

--- a/pages/editMusic.html
+++ b/pages/editMusic.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button ng-click="editMusic.cancel()" type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">添加音乐</h4>
+                <h4 class="modal-title">编辑音乐</h4>
             </div>
             <form name="musicForm" novalidate ng-submit="musicForm.$valid && editMusic.saveForm()">
                 <div class="modal-body">
