--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -38,7 +38,8 @@
         </span>
     </div>
     <hr class="break-space">
-    
+    <button ng-click="editedList.addMoreMovie()" class="btn btn-default">添加</button>
+    <hr class="break-space">
     <table class="table table-hover table-condensed" ng-table="editedList.tableParams">
         <thead>
             <tr>
