--- a/pages/musicLibrary.html
+++ b/pages/musicLibrary.html
@@ -14,19 +14,21 @@
     <table class="table table-hover table-condensed">
         <thead>
             <tr>
+                <th>序号</th>
                 <th>封面</th>
                 <th>名称</th>
                 <th>歌手</th>
-                <th>编辑</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
             <div ng-show="mL.loading">loading...</div>
             <tr ng-repeat="music in mL.musicList">
+                <td data-title="'序号'" >{{music.Seq}}</td>
                 <td data-title="'封面'" ><img src="" alt="" ng-src="{{music.PicURL_ABS}}" style="max-width: 100px;max-height: 100px;"> </td>
                 <td data-title="'名称'" style="vertical-align: middle;">{{music.Name[mL.defaultLang]}}</td>
                 <td data-title="'歌手'" style="vertical-align: middle;">{{music.SingerName[mL.defaultLang]}}</td>
-                <td data-title="'编辑'" style="vertical-align: middle;"><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button> </td>
+                <td data-title="'编辑'" style="vertical-align: middle;"><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button><button ng-click="mL.delMusic(music.musicID)" class="btn btn-default">删除</button> </td>
             </tr>
         </tbody>
     </table>
