--- a/pages/addMoreMovie.html
+++ b/pages/addMoreMovie.html
@@ -1,18 +1,18 @@
 <!--fix my css-->
-<div class="modal"  ng-controller="addMovieInfoController as addMovieInfo" ng-init="addMovieInfo.init()">
+<div class="modal"  ng-controller="addMoreMovieController as aMM" ng-init="aMM.init()">
     <div class="modal-backdrop in"></div>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button ng-click="addMovieInfo.cancel()" type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">编辑信息</h4>
+                <button ng-click="aMM.cancel()" type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">添加影片</h4>
             </div>
-            <form name="movieForm" novalidate ng-submit="movieForm.$valid && addMovieInfo.addMovie()">
+            <form name="movieForm" novalidate ng-submit="movieForm.$valid && aMM.addMovie()">
                 <div class="modal-body">
                         <div class="form-group" >
-                            <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
+                            <span ng-repeat="lang in aMM.editLangs track by $index">
                                 <label>名称-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Name[lang.code]" value="星际迷航" required>
+                                <input type="text" class="form-control" ng-model="aMM.movieInfo.Name[lang.code]" value="星际迷航" required>
                             </span>
                             
                         </div>
@@ -20,95 +20,95 @@
                         <hr>
                         <div class="form-group">
                             <label>类型</label>
-                            <div ng-show="addMovieInfo.noCategotyData">查无数据</div>
-                            <span ng-repeat="category in addMovieInfo.categoryList track by $index">
-                                <input type="checkbox" ng-model="this.value" ng-click="addMovieInfo.chooseCateory(category.ID,this.value)" > {{category.CategoryName[addMovieInfo.defaultLang]}} 
+                            <div ng-show="aMM.noCategotyData">查无数据</div>
+                            <span ng-repeat="category in aMM.categoryList track by $index">
+                                <input type="checkbox" ng-model="this.value" ng-click="aMM.chooseCateory(category.ID,this.value)" > {{category.CategoryName[aMM.defaultLang]}} 
                             </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>产地</label>
-                            <div ng-show="addMovieInfo.noLocationData">查无数据</div>
-                            <span ng-repeat="location in addMovieInfo.locationList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="addMovieInfo.chooseLocation(location.ID,this.value)" > {{location.LocationName[addMovieInfo.defaultLang]}}</span> 
+                            <div ng-show="aMM.noLocationData">查无数据</div>
+                            <span ng-repeat="location in aMM.locationList track by $index"><input type="checkbox"   ng-model="this.value" ng-click="aMM.chooseLocation(location.ID,this.value)" > {{location.LocationName[aMM.defaultLang]}}</span> 
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>封面</label><br>
                                <input type="file" file-model="myCoverImg" data-e="none" required><br>
-                               <div ng-repeat="img in addMovieInfo.uploadList.data">
+                               <div ng-repeat="img in aMM.uploadList.data">
                                 <img width="100%" src="{{img.img.src}}">
-                                上传进度：{{img.img.percentComplete}}  
+                                上传进度：{{img.img.percentComplete}} % 
                                </div>
                             <hr class="break-space">
-                            <div ng-click="addMovieInfo.addCoverImg()" class="btn btn-primary">上传</div>
+                            <div ng-click="aMM.addCoverImg()" class="btn btn-primary">上传</div>
                         </div>
                         <hr>
                         <div class="form-group">
-                        <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
+                        <span ng-repeat="lang in aMM.editLangs track by $index">
                             <label>简介-{{lang.name}}</label>
                         
-                            <textarea style="height: 150px;" type="text" ng-model="addMovieInfo.movieInfo.Introduce[lang.code]" class="form-control" required></textarea>
+                            <textarea style="height: 150px;" type="text" ng-model="aMM.movieInfo.Introduce[lang.code]" class="form-control" required></textarea>
                         </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>价格</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Price" required>
+                            <input type="number" class="form-control" ng-model="aMM.movieInfo.Price" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>影片大小(字节)</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.MovieSize" required>
+                            <input type="number" class="form-control" ng-model="aMM.movieInfo.MovieSize" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>影片地址</label>
-                            <input type="url" class="form-control" ng-model="addMovieInfo.movieInfo.URL_ABS" required>
+                            <input type="text" class="form-control" ng-model="aMM.movieInfo.URL_ABS" required>
                         </div>
                         <hr>
 
                         <div class="form-group">
                             <label>影片时长</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Duration" required>
+                            <input type="number" class="form-control" ng-model="aMM.movieInfo.Duration" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>上映年份</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Year" required>
+                            <input type="text" class="form-control" ng-model="aMM.movieInfo.Year" required>
                         </div>
                         <hr>
                         <div class="form-group">
-                            <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
+                            <span ng-repeat="lang in aMM.editLangs track by $index">
                                 <label>导演-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Director[lang.code]" value="星际迷航" required>
+                                <input type="text" class="form-control" ng-model="aMM.movieInfo.Director[lang.code]" value="星际迷航" required>
                             </span>
                         </div>
                         <hr>
                         <div class="form-group">
-                            <span ng-repeat="lang in addMovieInfo.editLangs track by $index">
+                            <span ng-repeat="lang in aMM.editLangs track by $index">
                                 <label>演员-{{lang.name}}</label>
-                                <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Actor[lang.code]" value="星际迷航" required>
+                                <input type="text" class="form-control" ng-model="aMM.movieInfo.Actor[lang.code]" value="星际迷航" required>
                             </span>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>排序</label>
-                            <input type="number" class="form-control" ng-model="addMovieInfo.movieInfo.Seq" required>
+                            <input type="number" class="form-control" ng-model="aMM.movieInfo.Seq" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>首字母（拼音大写缩写）</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.SearchName" required>
+                            <input type="text" class="form-control" ng-model="aMM.movieInfo.SearchName" required>
                         </div>
                         <hr>
                         <div class="form-group">
                             <label>评分（总分10分，精确到一位小数，例如：9.7）</label>
-                            <input type="text" class="form-control" ng-model="addMovieInfo.movieInfo.Score" required>
+                            <input type="text" class="form-control" ng-model="aMM.movieInfo.Score" required>
                         </div>
                 </div>
                 <div class="modal-footer">
-                    <a ng-click="addMovieInfo.cancel()" class="btn">取消</a>
-                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid || addMovieInfo.saving ">保存修改</button>
+                    <a ng-click="aMM.cancel()" class="btn">取消</a>
+                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid || aMM.saving ">保存修改</button>
                 </div>
             </form>  
         </div>
