--- a/pages/musicLibrary.html
+++ b/pages/musicLibrary.html
@@ -24,7 +24,7 @@
         <tbody>
             <div ng-show="mL.loading">loading...</div>
             <tr ng-repeat="music in mL.musicList">
-                <td data-title="'序号'" >{{music.Seq}}</td>
+                <td data-title="'序号'" style="vertical-align: middle;">{{music.Seq}}</td>
                 <td data-title="'封面'" ><img src="" alt="" ng-src="{{music.PicURL_ABS}}" style="max-width: 100px;max-height: 100px;"> </td>
                 <td data-title="'名称'" style="vertical-align: middle;">{{music.Name[mL.defaultLang]}}</td>
                 <td data-title="'歌手'" style="vertical-align: middle;">{{music.SingerName[mL.defaultLang]}}</td>
