--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -67,6 +67,9 @@
                     <button ng-click="editedList.edit(movie.ID)" class="btn btn-xs btn-default" title="编辑">
                         <i class="glyphicon glyphicon-pencil"></i>
                     </button>
+                    <button ng-click="editedList.delMovie(movie.ID)" class="btn btn-xs btn-default" title="删除">
+                        <i class="glyphicon glyphicon-remove"></i>
+                    </button>
                     
                 </td>
             </tr>
