待入库 入库内容 显示 影片地址和影片大小

--- a/pages/addMovieInfo.html
+++ b/pages/addMovieInfo.html
@@ -57,7 +57,10 @@
                         </div>
                         <hr>
                         <label>影片大小</label>
-                        <h5>{{addMovieInfo.maskParams.Size}}</h5>
+                        <h5>{{addMovieInfo.maskParams.Size}} 字节</h5>
+                        <hr>
+                        <label>影片地址</label>
+                        <h5 style="word-break:break-all;word-wrap: break-word;">{{addMovieInfo.maskParams.URL}} 字节</h5>
                         <hr>
                         <div class="form-group">
                             <label>上映年份</label>
