--- a/pages/addMovieInfo.html
+++ b/pages/addMovieInfo.html
@@ -60,7 +60,7 @@
                         <h5>{{addMovieInfo.maskParams.Size}} 字节</h5>
                         <hr>
                         <label>影片地址</label>
-                        <h5 style="word-break:break-all;word-wrap: break-word;">{{addMovieInfo.maskParams.URL}} 字节</h5>
+                        <h5 style="word-break:break-all;word-wrap: break-word;">{{addMovieInfo.maskParams.URL}}</h5>
                         <hr>
                         <div class="form-group">
                             <label>上映年份</label>
