--- a/pages/musicLibrary.html
+++ b/pages/musicLibrary.html
@@ -28,7 +28,7 @@
                 <td data-title="'封面'" ><img src="" alt="" ng-src="{{music.PicURL_ABS}}" style="max-width: 100px;max-height: 100px;"> </td>
                 <td data-title="'名称'" style="vertical-align: middle;">{{music.Name[mL.defaultLang]}}</td>
                 <td data-title="'歌手'" style="vertical-align: middle;">{{music.SingerName[mL.defaultLang]}}</td>
-                <td data-title="'编辑'" style="vertical-align: middle;"><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button><button ng-click="mL.delMusic(music.musicID)" class="btn btn-default">删除</button> </td>
+                <td data-title="'编辑'" style="vertical-align: middle;"><button ng-click="mL.editMusic(music)" class="btn btn-default">编辑</button><button ng-click="mL.delMusic(music.ID)" class="btn btn-default">删除</button> </td>
             </tr>
         </tbody>
     </table>
