新增-待入库模块-入库按钮指定到相应视频库功能

--- a/pages/app.html
+++ b/pages/app.html
@@ -40,12 +40,13 @@
                 <hr>
                 <hr> -->
                
-                <a class="font-bold no-underline cursor-default"  data-toggle="collapse" data-target="#collapseExampleVideo" aria-expanded="false" aria-controls="collapseExample" ng-click="app.goTOVideoLibrary()">
-                    <i class="glyphicon glyphicon-music"></i>&nbsp&nbsp视频库
+                <a class="font-bold no-underline cursor-default"  data-toggle="collapse" data-target="#collapseExampleVideo" aria-expanded="false" aria-controls="collapseExample" >
+                <!-- ng-click="app.goTOVideoLibrary()" -->
+                    <i class="glyphicon glyphicon-film"></i>&nbsp&nbsp视频库
                 </a>
                 <div class="collapse" id="collapseExampleVideo">
                     <ul class="well">
-                        <a class="well font-bold no-underline cursor-default" data-toggle="collapse" data-target="#collapseExampleVideoTopic" aria-expanded="false" aria-controls="collapseExample" style="border: none;"><i class="glyphicon glyphicon-music"></i>&nbsp&nbsp专题大片</a>
+                        <a class="well font-bold no-underline cursor-default" data-toggle="collapse" data-target="#collapseExampleVideoTopic" aria-expanded="false" aria-controls="collapseExample" style="border: none;"><i class="glyphicon glyphicon-film"></i>&nbsp&nbsp专题大片</a>
                         <div class="collapse" id="collapseExampleVideoTopic" style="margin-top: 40px;">
                             <li class="well"  ng-click="app.goTOVideoLibrary(videoLib.ID)" ng-repeat="videoLib in app.videosLibList" style="margin-bottom: 0;">{{videoLib.Name[app.defaultLang]}}</li>
                         </div>
