修复-专题大片模块-视频库选择功能

--- a/pages/addMovieInfo.html
+++ b/pages/addMovieInfo.html
@@ -17,6 +17,7 @@
                                 {{videosLib.Name[addMovieInfo.defaultLang]}}
                             </span>
                         </div>
+                        {{addMovieInfo.videoLibID}}
                         <hr>
 
                         <div class="form-group" >
