优化-视频库模块-editListy页面显示对应的视频库名称

--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -4,7 +4,7 @@
             <i class="glyphicon glyphicon-film"></i>
             已入库
         </strong>
-        <strong>{{}}</strong>
+        <strong>{{editedList.LibName}}</strong>
     </a>
     <hr>
     
